# reversi

./: .gitignore  GameOverException.clj  README  README-CL  auxfns.clj  auxfns.lisp  constants.clj  constants.lisp  edge-table-utils.clj  edge-table-utils.lisp  efficient-bitscanning.lisp  glossary-table.txt  gui.clj  init.clj  notes.txt  reversi.asd  reversi.clj  reversi.lisp  scratch-pad.clj  snake.clj  strategies-test.clj  strategies.clj  strategies.lisp  test-fixtures.clj  test-strategies.clj  types.lisp  z
field_research/code/bill/bill-1.0/: CONTACT  HISTORY  Help  History  INSTALL  Makefile.in  config.h.in  configure  configure.in
field_research/code/bill/bill-1.0/ab/: ab_info.c  hash.c  search.c  steal.c  time.c  zero.c
field_research/code/bill/bill-1.0/book/: Black_Opening.c  White_Opening.c  book.c
field_research/code/bill/bill-1.0/eval/: bayes_data1.c  bayes_data2.c  coef.c  coef1.c  coef20.c  coef21.c  coef4.c  coef9.c  combine21.c  combine4.c  compute4.c  compute4_newedge.c  eval.c  eval21.c  eval80.c  eval9.c  eval_newedge.c  eval_table.c  linearn.c  merge17.c  merge9.c  mergen.c  win_prob4.c  win_probn.c
field_research/code/bill/bill-1.0/include/: ab_info.h  bill-features.h  board.h  check.h  color.h  debug.h  dist.h  eval.h  exact.h  extract.h  features8.h  files.h  general.h  hash.h  killer.h  line.h  matrix.h  move.h  node.h  old.h  pack.h  pfi.h  prune.h  search.h  ss_info.h  stat.h  tourn.h  version.h  work.h
field_research/code/bill/bill-1.0/io/: bill.c  computer.c  io.c  libs.c  player.c  print.c  sedfile  sig.c  stat.c
field_research/code/bill/bill-1.0/ios/: Black.stat  Makefile.in  Results  White.stat  client.c  client.h  front-end  front-end.c  interface.h  ios.h  sig.i
field_research/code/bill/bill-1.0/misc/: bill.help  copy_board.c  error.c  global.c  init.c  init_data.c  precedence  search_table.c  utils.c
field_research/code/bill/bill-1.0/move/: move.c  move2.c
field_research/code/bill/bill-1.0/select/: dump.c  expand.c  select.c
field_research/code/bill/bill-1.0/tables/: Makefile.in  tables.h
field_research/code/bill/bill-1.0/utils/: cleanup  (+1 more)
(+1215 files in other folders)
